fix: social button align & font issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 @font-face {
   font-family: 'Montserrat';
   src: local('Montserrat-Bold'), url('./assets/Montserrat-Bold.ttf') format('truetype');
 }
-.header-section{
+.header-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,9 +20,22 @@
   align-items: center;
 }
 .social-icon {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: 5px;
   width: 40px;
+  height: 40px;
   cursor: pointer;
+}
+
+.social-icon a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 .logo {
   font-weight: bold;
@@ -150,18 +165,20 @@
 } */
 
 .primary-button {
-  width: 100%;
-  height: 40px;
-  font-size: 16px;
-  margin-left: 30px;
-  border-radius: 100px;
-  background: linear-gradient(73.6deg, #85FFC4 2.11%, #5CC6FF 42.39%, #BC85FF 85.72%);
-  border: 0px;
-  cursor: pointer;
-  padding: 0;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  background: linear-gradient(73.6deg,#85ffc4 2.11%,#5cc6ff 42.39%,#bc85ff 85.72%);
+  border: 0;
+  border-radius: 100px;
+  display: flex;
+  font-size: 13px !important;
+  height: 40px;
+  justify-content: center;
+  margin-left: 30px;
+  padding: 0px 15px;
+  width: 100%;
+  max-width: 150px;
+  FONT-WEIGHT: 300;
+  font-family: 'Montserrat';
   text-decoration: none;
 }
 
